<resources>
    <string name="app_name">Cuebap</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="facebook_app_id">1349474261821196</string>
    <string name="fb_login_protocol_scheme">fb1349474261821196</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cuebap123</string>
    <string name="nav_header_subtitle">Yonsei Sinchon Campus</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="required">Required</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="or_start_with">OR\nStart With</string>
    <string name="enter_password">enter password (6~12 characters)</string>
    <string name="sign_in_failed">Sign in failed.</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed out.</string>
    <string name="account_information">Account Information</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="choose_your_campus">Choose Your Campus</string>
    <string name="register_your_card">Register Your Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiration">Expiration</string>
    <string name="use">Use</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="register">Register</string>
    <string name="example_email">example: example@cuebap.com</string>
    <string name="example_phone_number">(omit \'-\')</string>
    <string name="select_campus">select campus</string>
    <string name="search">Search</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_failed">Sign up failed.</string>
    <string name="signed_in">Signed in.</string>
    <string name="signed_up">Signed up.</string>
    <string name="name">Name</string>
    <string name="example_name">enter your name</string>
    <string name="change_language">Change Language (Eng to Kor)</string>
    <string name="yonsei_university">Yonsei University</string>
    <string name="sinchon_campus">Sinchon Campus</string>
    <string name="international_campus">International Campus</string>
    <string name="wonju_campus">Wonju Campus</string>
    <string name="reenter_password">re-enter password</string>
    <string name="password_mismatch">Your password doesn\'t match.</string>
    <string name="optional_card_registration">Card registration (optional)</string>
    <string name="account_already_exists">An account already exists with the same email address!</string>
    <string name="choose_campus">Choose Campus</string>
    <string name="are_you_willing_to_choose">Are you willing to choose \'%1$s %2$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="my_page">My Page</string>
    <string name="mobile_receipt">Mobile Receipt</string>
    <string name="cart">Cart</string>
    <string name="favorites">Favorites</string>
    <string name="you_are_here">You are here</string>
    <string name="restaurant_time">(%1$d:00 - %2$d:00)</string>
    <string name="restaurant_waiting">%1$d waiting</string>
    <string name="building_km_away">%1$d km away</string>
    <string name="new_millennium_hall">New Millennium Hall</string>
    <string name="students_building">Students Building</string>
    <string name="the_commons">The Commons</string>
    <string name="daewoo_hall">Daewoo Hall</string>
    <string name="samsung_hall">Samsung Hall</string>
    <string name="engineering_hall_a">Engineering Hall A</string>
    <string name="engineering_hall_b">Engineering Hall B</string>
    <string name="engineering_hall_c">Engineering Hall C</string>
    <string name="engineering_hall_d">Engineering Hall D</string>
    <string name="widang_hall">Widang Hall</string>
    <string name="hankyoung_hall">Hankyoung Hall</string>
    <string name="crazy_brown">Crazy Brown</string>
    <string name="very_berry">Very Berry</string>
    <string name="cafe_aaa">Cafe aaa</string>
    <string name="beverage">Beverage</string>
    <string name="food">Food</string>
    <string name="bubble_milk_tea">Bubble Milk Tea</string>
    <string name="lemon_tea">Lemon Tea</string>
    <string name="strawberry_yogurt">Strawberry Yogurt</string>
    <string name="americano">Americano</string>
    <string name="cafe_latte">Cafe Latte</string>
    <string name="cafe_mocha">Cafe Mocha</string>
    <string name="vanilla_latte">Vanilla Latte</string>
    <string name="green_tea_latte">Green Tea Latte</string>
    <string name="menu_price">%1$d won</string>
    <string name="menu">Menu</string>
    <string name="information">Information</string>
    <string name="review">Review</string>
    <string name="lemon_shrimp_linguine">Lemon Shrimp Linguine</string>
    <string name="vongole_pasta">Vongole Pasta</string>
    <string name="egg_sandwich">Egg Sandwich</string>
    <string name="baguette_pizza">Baguette Pizza</string>
    <string name="oven_spaghetti_carbonara">Oven Spaghetti Carbonara</string>
    <string name="oven_spaghetti_chicken_barbecue">Oven Spaghetti Chicken Barbecue</string>
    <string name="salmon_wine_salad">Salmon Wine Salad</string>
    <string name="chicken_breast_salad">Chicken Breast Salad</string>
    <string name="item_selected">Item Selected</string>
    <string name="do_you_want_to_add_to_cart">Do you want to add \'%1$s\' to your cart?</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="delete_item">Delete Item</string>
    <string name="do_you_want_to_remove">Do you want to remove \'%1$s\' from your cart?</string>
    <string name="remove_item">Remove Item</string>
    <string name="order_list">Order List</string>
    <string name="pick_up">Pick Up</string>
    <string name="order_method">Order Method</string>
    <string name="payment_option">Payment Option</string>
    <string name="total_price">Total Price</string>
    <string name="simple_payment">Simple Payment</string>
    <string name="credit_card">Credit Card</string>
    <string name="point">Point</string>
    <string name="coupon">Coupon</string>
    <string name="discount">Discount</string>
    <string name="pay">Pay</string>
    <string name="add_menus">Add Menus</string>
    <string name="select">Select</string>
    <string name="order_immediately">Order Immediately</string>
    <string name="order_later">Order Later</string>
    <string name="order_bill">Order Bill</string>
    <string name="nothing_in_cart">There\'s nothing in the cart!</string>
    <string name="cuebap">Cuebap</string>
    <string name="order_from_new_restaurant">Do you want to cancel the menus in the cart and order from a new restaurant?</string>
    <string name="no_restaurant_selected">No Restaurant Selected</string>
    <string name="blackberry_yogurt">Blackberry Yogurt</string>
    <string name="blueberry_yogurt">Blueberry Yogurt</string>
    <string name="granola_yogurt">Granola Yogurt</string>
    <string name="mango_yogurt">Mango Yogurt</string>
    <string name="raspberry_yogurt">Raspberry Yogurt</string>
    <string name="service_in_preparation">Service in preparation...!</string>
    <string name="empty">Empty</string>
    <string name="do_you_want_to_empty_the_cart">Do you want to empty the cart?</string>
    <string name="points_display">%1$d points</string>
    <string name="coupons_display">%1$d coupons</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="sum">Sum</string>
    <string name="set">Set</string>
    <string name="order_later_time">Scheduled to order at %1$d:%2$d %3$s</string>
    <string name="am">a.m.</string>
    <string name="pm">p.m.</string>
    <string name="your_order_has_been_completed">Your order has been completed</string>
    <string name="order">Order</string>
    <string name="order_status">Order Status</string>
    <string name="basic_time">%1$d:%2$d %3$s</string>
    <string name="home">Home</string>
    <string name="reservation">Reservation</string>
    <string name="preparing">Preparing</string>
    <string name="ready">Ready</string>
    <string name="view_detailed_receipt">View Detailed Receipt</string>
    <string name="no_order_placed">There are no orders placed!</string>
    <string name="price">Price</string>
    <string name="subtotal">Subtotal</string>
    <string name="fold_detailed_receipt">Fold Detailed Receipt</string>
    <string name="event">Event</string>
    <string name="get_coupons">Get Coupons</string>
</resources>
