<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckOutPage.CheckOutActivity"
    >

    <View
        android:id="@+id/check_out_status_bar_height"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        android:layout_alignParentTop="true"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/check_out_status_bar_height"
        >

        <RelativeLayout
            android:id="@+id/check_out_no_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                >

                <ImageView
                    android:id="@+id/check_out_no_items_logo"
                    android:layout_width="@dimen/nothing_in_cart_image_width"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/cuebap_logo_twolines_yellow"
                    />

                <TextView
                    android:id="@+id/check_out_no_order_placed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/cart_page_no_items_logo"
                    android:layout_marginTop="@dimen/small_side_margin"
                    android:text="@string/nothing_in_cart"
                    android:textSize="@dimen/nothing_in_cart_text_size"
                    android:textColor="@color/colorDarkGray"
                    />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/check_out_yes_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/checkout_page_home_btn_layout"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80dp"
                    >

                    <TextView
                        android:id="@+id/check_out_mobile_receipt_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/mobile_receipt"
                        android:textColor="@color/colorPrimary"
                        android:textSize="35sp"
                        />

                    <TextView
                        android:id="@+id/check_out_order_completed_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/check_out_mobile_receipt_text"
                        android:layout_marginTop="30dp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/your_order_has_been_completed"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:id="@+id/check_out_waiting_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/check_out_order_completed_text"
                        android:layout_marginTop="20dp"
                        android:layout_centerHorizontal="true"
                        android:text="237"
                        android:textColor="@color/colorPrimary"
                        android:textSize="70sp"
                        />

                    <TextView
                        android:id="@+id/check_out_pick_up_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/check_out_waiting_number"
                        android:layout_marginTop="20dp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/pick_up"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:id="@+id/check_out_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/check_out_pick_up_text"
                        android:layout_marginTop="20dp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/basic_time"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        />

                    <com.ramotion.foldingcell.FoldingCell
                        android:id="@+id/check_out_foldingCell"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/check_out_time_text"
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="10dp"
                        app:animationDuration="1000"
                        app:backSideColor="@color/colorLightGray"
                        >

                        <LinearLayout
                            android:id="@+id/check_out_cell_content_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone"
                            >

                            <TextView
                                android:id="@+id/check_out_fold_receipt_text"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/restaurant_name_height"
                                android:background="@drawable/building_button"
                                android:gravity="center_vertical"
                                android:text="@string/view_detailed_receipt"
                                android:paddingHorizontal="@dimen/standard_side_margin"
                                />

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/check_out_receipt_list"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="@dimen/standard_side_margin"
                                android:scrollbars="none"
                                android:nestedScrollingEnabled="false"
                                >
                            </android.support.v7.widget.RecyclerView>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/field_background"
                                android:padding="@dimen/standard_side_margin"
                                android:orientation="vertical"
                                >

                                <RelativeLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/standard_side_margin"
                                    >

                                    <TextView
                                        android:id="@+id/check_out_subtotal"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentStart="true"
                                        android:text="@string/subtotal"
                                        android:textSize="@dimen/field_text_size"
                                        android:textColor="@color/colorPrimary"
                                        />

                                    <TextView
                                        android:id="@+id/check_out_subtotal_display"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentEnd="true"
                                        android:text="@string/points_display"
                                        android:textSize="@dimen/field_text_size"
                                        android:textColor="@color/colorDarkGray"
                                        />

                                </RelativeLayout>

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_marginBottom="@dimen/standard_side_margin"
                                    android:background="@color/colorPrimary"
                                    />

                                <RelativeLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    >

                                    <TextView
                                        android:id="@+id/check_out_total_points_discount_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentStart="true"
                                        android:text="@string/discount"
                                        android:textSize="@dimen/field_text_size"
                                        android:textColor="@color/colorPrimary"
                                        />

                                    <TextView
                                        android:id="@+id/check_out_total_points_discount_display"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentEnd="true"
                                        android:text="@string/menu_price"
                                        android:textSize="@dimen/field_text_size"
                                        android:textColor="@color/colorDarkGray"
                                        />

                                </RelativeLayout>

                            </LinearLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/total_price_height"
                                android:background="@drawable/field_background_yellow"
                                android:paddingHorizontal="@dimen/standard_side_margin"
                                android:layout_marginVertical="@dimen/standard_side_margin"
                                android:visibility="visible"
                                android:orientation="horizontal"
                                >

                                <TextView
                                    android:id="@+id/check_out_total_price_bottom_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_centerVertical="true"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="@dimen/total_price_text_size"
                                    android:text="@string/total_price"
                                    />

                                <TextView
                                    android:id="@+id/check_out_total_price_display"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:text="60000 won"
                                    android:textSize="@dimen/total_price_price_text_size"
                                    android:textColor="@color/colorWhite"
                                    />

                            </RelativeLayout>


                        </LinearLayout>

                        <FrameLayout
                            android:id="@+id/check_out_cell_title_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/building_button"
                            android:visibility="visible"
                            >

                            <TextView
                                android:id="@+id/check_out_view_receipt_text"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/restaurant_name_height"
                                android:gravity="center_vertical"
                                android:text="@string/view_detailed_receipt"
                                android:layout_marginHorizontal="@dimen/standard_side_margin"
                                />

                        </FrameLayout>

                    </com.ramotion.foldingcell.FoldingCell>

                    <TextView
                        android:id="@+id/check_out_order_status_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/check_out_foldingCell"
                        android:layout_marginTop="20dp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/order_status"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="50dp"
                        android:layout_below="@id/check_out_order_status_text"
                        android:weightSum="12"
                        >

                        <TextView
                            android:id="@+id/check_out_reservation_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:text="@string/reservation"
                            android:textSize="17sp"
                            android:textColor="@color/colorSelectedGreen"
                            />

                        <TextView
                            android:id="@+id/check_out_preparing_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:text="@string/preparing"
                            android:textSize="17sp"
                            android:textColor="@color/colorDarkGray"
                            />

                        <TextView
                            android:id="@+id/check_out_ready_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:gravity="center_horizontal"
                            android:text="@string/ready"
                            android:textSize="17sp"
                            android:textColor="@color/colorDarkGray"
                            />

                    </LinearLayout>

                </RelativeLayout>

            </ScrollView>


            <LinearLayout
                android:id="@+id/checkout_page_home_btn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/checkout_page_home_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bottom_button_height"
                    android:gravity="center"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/home"
                    android:textSize="@dimen/bottom_button_text_size"
                    android:textColor="@color/colorWhite"
                    />

            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>



</RelativeLayout>